kubernetes-old/apps/flux-system/addons/webhooks/github/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-webhook
  namespace: flux-system
  annotations:
    public.ingress.home.arpa: "true"
    hajimari.io/enable: "false"
spec:
  ingressClassName: "${INGRESS_CLASS}"
  rules:
    - host: &host "flux-webhook.${DOMAIN}"
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
        - *host
      secretName: "${PRODUCTION_TLS}"
